2nd of 5 character batch revisited.

--- a/client/styles/gameCard.css
+++ b/client/styles/gameCard.css
@@ -774,6 +774,10 @@
   padding-left: 10% !important;
 }
 
+.roster_abil_desc.black {
+  color: whitesmoke !important;
+}
+
 .miniGameCard.left {
   position: absolute;
   top: 0;
