--- a/client/styles/gameCard.scss
+++ b/client/styles/gameCard.scss
@@ -393,6 +393,7 @@ $white: white;
 }
 .roster_abil_description.left{left: -23%!important;}
 .roster_abil_name.left{padding-left: 10%!important;}
+.roster_abil_desc.black{color:whitesmoke!important;}
 .miniGameCard.left{
     position: absolute;
     top: 0;
