added: hexlings revised, rattlebone in progress.

--- a/client/styles/gameEffects.css
+++ b/client/styles/gameEffects.css
@@ -300,7 +300,7 @@
   }
 }
 
-[data-glow="recruitGlow"], [data-glow="claimColor"], [data-glow="newSpewWhite"], [data-glow="graspingDead"], [data-glow="answerTheCall"], [data-glow="inductGlow"], [data-glow="sneak"] {
+[data-glow="recruitGlow"], [data-glow="claimColor"], [data-glow="newSpewWhite"], [data-glow="graspingDead"], [data-glow="answerTheCall"], [data-glow="inductGlow"], [data-glow="sneak"], [data-glow="callTotems"] {
   animation: 30s infinite alternate glowwhite;
 }
 
@@ -456,252 +456,252 @@
 }
 
 .particle:nth-of-type(1) {
-  animation-delay: 0.5025s;
+  animation-delay: 0.98808s;
   left: calc((100% - 5em) * 0);
 }
 
 .particle:nth-of-type(2) {
-  animation-delay: 0.04594s;
+  animation-delay: 0.07564s;
   left: calc((100% - 5em) * 0.02);
 }
 
 .particle:nth-of-type(3) {
-  animation-delay: 0.22444s;
+  animation-delay: 0.31232s;
   left: calc((100% - 5em) * 0.04);
 }
 
 .particle:nth-of-type(4) {
-  animation-delay: 0.02962s;
+  animation-delay: 0.59256s;
   left: calc((100% - 5em) * 0.06);
 }
 
 .particle:nth-of-type(5) {
-  animation-delay: 0.3112s;
+  animation-delay: 0.89142s;
   left: calc((100% - 5em) * 0.08);
 }
 
 .particle:nth-of-type(6) {
-  animation-delay: 0.89999s;
+  animation-delay: 0.48139s;
   left: calc((100% - 5em) * 0.1);
 }
 
 .particle:nth-of-type(7) {
-  animation-delay: 0.45599s;
+  animation-delay: 0.63495s;
   left: calc((100% - 5em) * 0.12);
 }
 
 .particle:nth-of-type(8) {
-  animation-delay: 0.78903s;
+  animation-delay: 0.29197s;
   left: calc((100% - 5em) * 0.14);
 }
 
 .particle:nth-of-type(9) {
-  animation-delay: 0.01216s;
+  animation-delay: 0.2331s;
   left: calc((100% - 5em) * 0.16);
 }
 
 .particle:nth-of-type(10) {
-  animation-delay: 0.27145s;
+  animation-delay: 0.395s;
   left: calc((100% - 5em) * 0.18);
 }
 
 .particle:nth-of-type(11) {
-  animation-delay: 0.06592s;
+  animation-delay: 0.38863s;
   left: calc((100% - 5em) * 0.2);
 }
 
 .particle:nth-of-type(12) {
-  animation-delay: 0.86903s;
+  animation-delay: 0.46346s;
   left: calc((100% - 5em) * 0.22);
 }
 
 .particle:nth-of-type(13) {
-  animation-delay: 0.41002s;
+  animation-delay: 0.79156s;
   left: calc((100% - 5em) * 0.24);
 }
 
 .particle:nth-of-type(14) {
-  animation-delay: 0.55123s;
+  animation-delay: 0.9222s;
   left: calc((100% - 5em) * 0.26);
 }
 
 .particle:nth-of-type(15) {
-  animation-delay: 0.77154s;
+  animation-delay: 0.32788s;
   left: calc((100% - 5em) * 0.28);
 }
 
 .particle:nth-of-type(16) {
-  animation-delay: 0.8395s;
+  animation-delay: 0.03247s;
   left: calc((100% - 5em) * 0.3);
 }
 
 .particle:nth-of-type(17) {
-  animation-delay: 0.096s;
+  animation-delay: 0.6417s;
   left: calc((100% - 5em) * 0.32);
 }
 
 .particle:nth-of-type(18) {
-  animation-delay: 0.45223s;
+  animation-delay: 0.29992s;
   left: calc((100% - 5em) * 0.34);
 }
 
 .particle:nth-of-type(19) {
-  animation-delay: 0.92856s;
+  animation-delay: 0.10724s;
   left: calc((100% - 5em) * 0.36);
 }
 
 .particle:nth-of-type(20) {
-  animation-delay: 0.26999s;
+  animation-delay: 0.02842s;
   left: calc((100% - 5em) * 0.38);
 }
 
 .particle:nth-of-type(21) {
-  animation-delay: 0.01076s;
+  animation-delay: 0.59249s;
   left: calc((100% - 5em) * 0.4);
 }
 
 .particle:nth-of-type(22) {
-  animation-delay: 0.60716s;
+  animation-delay: 0.19132s;
   left: calc((100% - 5em) * 0.42);
 }
 
 .particle:nth-of-type(23) {
-  animation-delay: 0.95383s;
+  animation-delay: 0.31051s;
   left: calc((100% - 5em) * 0.44);
 }
 
 .particle:nth-of-type(24) {
-  animation-delay: 0.19105s;
+  animation-delay: 0.91847s;
   left: calc((100% - 5em) * 0.46);
 }
 
 .particle:nth-of-type(25) {
-  animation-delay: 0.62202s;
+  animation-delay: 0.23645s;
   left: calc((100% - 5em) * 0.48);
 }
 
 .particle:nth-of-type(26) {
-  animation-delay: 0.37539s;
+  animation-delay: 0.14339s;
   left: calc((100% - 5em) * 0.5);
 }
 
 .particle:nth-of-type(27) {
-  animation-delay: 0.82281s;
+  animation-delay: 0.3499s;
   left: calc((100% - 5em) * 0.52);
 }
 
 .particle:nth-of-type(28) {
-  animation-delay: 0.76829s;
+  animation-delay: 0.73965s;
   left: calc((100% - 5em) * 0.54);
 }
 
 .particle:nth-of-type(29) {
-  animation-delay: 0.54066s;
+  animation-delay: 0.21354s;
   left: calc((100% - 5em) * 0.56);
 }
 
 .particle:nth-of-type(30) {
-  animation-delay: 0.18836s;
+  animation-delay: 0.80532s;
   left: calc((100% - 5em) * 0.58);
 }
 
 .particle:nth-of-type(31) {
-  animation-delay: 0.2873s;
+  animation-delay: 0.85352s;
   left: calc((100% - 5em) * 0.6);
 }
 
 .particle:nth-of-type(32) {
-  animation-delay: 0.35676s;
+  animation-delay: 0.01711s;
   left: calc((100% - 5em) * 0.62);
 }
 
 .particle:nth-of-type(33) {
-  animation-delay: 0.26213s;
+  animation-delay: 0.74617s;
   left: calc((100% - 5em) * 0.64);
 }
 
 .particle:nth-of-type(34) {
-  animation-delay: 0.39195s;
+  animation-delay: 0.50315s;
   left: calc((100% - 5em) * 0.66);
 }
 
 .particle:nth-of-type(35) {
-  animation-delay: 0.5717s;
+  animation-delay: 0.26411s;
   left: calc((100% - 5em) * 0.68);
 }
 
 .particle:nth-of-type(36) {
-  animation-delay: 0.03019s;
+  animation-delay: 0.07906s;
   left: calc((100% - 5em) * 0.7);
 }
 
 .particle:nth-of-type(37) {
-  animation-delay: 0.81709s;
+  animation-delay: 0.71936s;
   left: calc((100% - 5em) * 0.72);
 }
 
 .particle:nth-of-type(38) {
-  animation-delay: 0.10144s;
+  animation-delay: 0.37176s;
   left: calc((100% - 5em) * 0.74);
 }
 
 .particle:nth-of-type(39) {
-  animation-delay: 0.26202s;
+  animation-delay: 0.27077s;
   left: calc((100% - 5em) * 0.76);
 }
 
 .particle:nth-of-type(40) {
-  animation-delay: 0.76924s;
+  animation-delay: 0.251s;
   left: calc((100% - 5em) * 0.78);
 }
 
 .particle:nth-of-type(41) {
-  animation-delay: 0.37419s;
+  animation-delay: 0.76351s;
   left: calc((100% - 5em) * 0.8);
 }
 
 .particle:nth-of-type(42) {
-  animation-delay: 0.41067s;
+  animation-delay: 0.40442s;
   left: calc((100% - 5em) * 0.82);
 }
 
 .particle:nth-of-type(43) {
-  animation-delay: 0.20965s;
+  animation-delay: 0.79073s;
   left: calc((100% - 5em) * 0.84);
 }
 
 .particle:nth-of-type(44) {
-  animation-delay: 0.33664s;
+  animation-delay: 0.86608s;
   left: calc((100% - 5em) * 0.86);
 }
 
 .particle:nth-of-type(45) {
-  animation-delay: 0.65091s;
+  animation-delay: 0.48998s;
   left: calc((100% - 5em) * 0.88);
 }
 
 .particle:nth-of-type(46) {
-  animation-delay: 0.08166s;
+  animation-delay: 0.88361s;
   left: calc((100% - 5em) * 0.9);
 }
 
 .particle:nth-of-type(47) {
-  animation-delay: 0.57028s;
+  animation-delay: 0.30167s;
   left: calc((100% - 5em) * 0.92);
 }
 
 .particle:nth-of-type(48) {
-  animation-delay: 0.05551s;
+  animation-delay: 0.37108s;
   left: calc((100% - 5em) * 0.94);
 }
 
 .particle:nth-of-type(49) {
-  animation-delay: 0.12344s;
+  animation-delay: 0.74139s;
   left: calc((100% - 5em) * 0.96);
 }
 
 .particle:nth-of-type(50) {
-  animation-delay: 0.38594s;
+  animation-delay: 0.33193s;
   left: calc((100% - 5em) * 0.98);
 }
 
@@ -939,4 +939,8 @@
 
 .hexagon:active {
   transform: scale(0.9);
+}
+
+.hexEaters.blighted.boon-blight {
+  opacity: 1;
 }
