--- a/client/styles/gameEffects.scss
+++ b/client/styles/gameEffects.scss
@@ -168,7 +168,7 @@ $glowDensity:.25;
         rgba(218, 165, 32, $glowDensity)
     )
 }
-[data-glow="recruitGlow"],[data-glow="claimColor"],[data-glow="newSpewWhite"],[data-glow="graspingDead"],[data-glow="answerTheCall"],[data-glow="inductGlow"],[data-glow="sneak"]{
+[data-glow="recruitGlow"],[data-glow="claimColor"],[data-glow="newSpewWhite"],[data-glow="graspingDead"],[data-glow="answerTheCall"],[data-glow="inductGlow"],[data-glow="sneak"],[data-glow="callTotems"]{
     @include makeGlow('white', 
         rgba(245, 245, 245, $glowDensity), 
         rgba(194, 197, 194, $glowDensity), 
@@ -503,3 +503,4 @@ $partSize: 5em;
 }
 .smallCard:active,#claimAction:active{@include click(.9);}
 .hexagon:active{@include click(.9);}
+.hexEaters.blighted.boon-blight{opacity:1;}
