added: fourth character batch revised.

--- a/client/styles/gameEffects.css
+++ b/client/styles/gameEffects.css
@@ -300,7 +300,7 @@
   }
 }
 
-[data-glow="recruitGlow"], [data-glow="claimColor"], [data-glow="newSpewWhite"], [data-glow="graspingDead"], [data-glow="answerTheCall"], [data-glow="inductGlow"], [data-glow="sneak"], [data-glow="callTotems"] {
+[data-glow="recruitGlow"], [data-glow="claimColor"], [data-glow^="newSpew"], [data-glow="graspingDead"], [data-glow="answerTheCall"], [data-glow="inductGlow"], [data-glow="sneak"], [data-glow="callTotems"] {
   animation: 30s infinite alternate glowwhite;
 }
 
@@ -456,252 +456,252 @@
 }
 
 .particle:nth-of-type(1) {
-  animation-delay: 0.98808s;
+  animation-delay: 0.53968s;
   left: calc((100% - 5em) * 0);
 }
 
 .particle:nth-of-type(2) {
-  animation-delay: 0.07564s;
+  animation-delay: 0.50913s;
   left: calc((100% - 5em) * 0.02);
 }
 
 .particle:nth-of-type(3) {
-  animation-delay: 0.31232s;
+  animation-delay: 0.36324s;
   left: calc((100% - 5em) * 0.04);
 }
 
 .particle:nth-of-type(4) {
-  animation-delay: 0.59256s;
+  animation-delay: 0.34218s;
   left: calc((100% - 5em) * 0.06);
 }
 
 .particle:nth-of-type(5) {
-  animation-delay: 0.89142s;
+  animation-delay: 0.47375s;
   left: calc((100% - 5em) * 0.08);
 }
 
 .particle:nth-of-type(6) {
-  animation-delay: 0.48139s;
+  animation-delay: 0.5472s;
   left: calc((100% - 5em) * 0.1);
 }
 
 .particle:nth-of-type(7) {
-  animation-delay: 0.63495s;
+  animation-delay: 0.75974s;
   left: calc((100% - 5em) * 0.12);
 }
 
 .particle:nth-of-type(8) {
-  animation-delay: 0.29197s;
+  animation-delay: 0.29087s;
   left: calc((100% - 5em) * 0.14);
 }
 
 .particle:nth-of-type(9) {
-  animation-delay: 0.2331s;
+  animation-delay: 0.03569s;
   left: calc((100% - 5em) * 0.16);
 }
 
 .particle:nth-of-type(10) {
-  animation-delay: 0.395s;
+  animation-delay: 0.43906s;
   left: calc((100% - 5em) * 0.18);
 }
 
 .particle:nth-of-type(11) {
-  animation-delay: 0.38863s;
+  animation-delay: 0.43236s;
   left: calc((100% - 5em) * 0.2);
 }
 
 .particle:nth-of-type(12) {
-  animation-delay: 0.46346s;
+  animation-delay: 0.03736s;
   left: calc((100% - 5em) * 0.22);
 }
 
 .particle:nth-of-type(13) {
-  animation-delay: 0.79156s;
+  animation-delay: 0.70606s;
   left: calc((100% - 5em) * 0.24);
 }
 
 .particle:nth-of-type(14) {
-  animation-delay: 0.9222s;
+  animation-delay: 0.35625s;
   left: calc((100% - 5em) * 0.26);
 }
 
 .particle:nth-of-type(15) {
-  animation-delay: 0.32788s;
+  animation-delay: 0.48048s;
   left: calc((100% - 5em) * 0.28);
 }
 
 .particle:nth-of-type(16) {
-  animation-delay: 0.03247s;
+  animation-delay: 0.53685s;
   left: calc((100% - 5em) * 0.3);
 }
 
 .particle:nth-of-type(17) {
-  animation-delay: 0.6417s;
+  animation-delay: 0.38294s;
   left: calc((100% - 5em) * 0.32);
 }
 
 .particle:nth-of-type(18) {
-  animation-delay: 0.29992s;
+  animation-delay: 0.51883s;
   left: calc((100% - 5em) * 0.34);
 }
 
 .particle:nth-of-type(19) {
-  animation-delay: 0.10724s;
+  animation-delay: 0.54513s;
   left: calc((100% - 5em) * 0.36);
 }
 
 .particle:nth-of-type(20) {
-  animation-delay: 0.02842s;
+  animation-delay: 0.23948s;
   left: calc((100% - 5em) * 0.38);
 }
 
 .particle:nth-of-type(21) {
-  animation-delay: 0.59249s;
+  animation-delay: 0.87627s;
   left: calc((100% - 5em) * 0.4);
 }
 
 .particle:nth-of-type(22) {
-  animation-delay: 0.19132s;
+  animation-delay: 0.22571s;
   left: calc((100% - 5em) * 0.42);
 }
 
 .particle:nth-of-type(23) {
-  animation-delay: 0.31051s;
+  animation-delay: 0.08939s;
   left: calc((100% - 5em) * 0.44);
 }
 
 .particle:nth-of-type(24) {
-  animation-delay: 0.91847s;
+  animation-delay: 0.40534s;
   left: calc((100% - 5em) * 0.46);
 }
 
 .particle:nth-of-type(25) {
-  animation-delay: 0.23645s;
+  animation-delay: 0.83164s;
   left: calc((100% - 5em) * 0.48);
 }
 
 .particle:nth-of-type(26) {
-  animation-delay: 0.14339s;
+  animation-delay: 0.57719s;
   left: calc((100% - 5em) * 0.5);
 }
 
 .particle:nth-of-type(27) {
-  animation-delay: 0.3499s;
+  animation-delay: 0.74812s;
   left: calc((100% - 5em) * 0.52);
 }
 
 .particle:nth-of-type(28) {
-  animation-delay: 0.73965s;
+  animation-delay: 0.12752s;
   left: calc((100% - 5em) * 0.54);
 }
 
 .particle:nth-of-type(29) {
-  animation-delay: 0.21354s;
+  animation-delay: 0.24055s;
   left: calc((100% - 5em) * 0.56);
 }
 
 .particle:nth-of-type(30) {
-  animation-delay: 0.80532s;
+  animation-delay: 0.50572s;
   left: calc((100% - 5em) * 0.58);
 }
 
 .particle:nth-of-type(31) {
-  animation-delay: 0.85352s;
+  animation-delay: 0.16795s;
   left: calc((100% - 5em) * 0.6);
 }
 
 .particle:nth-of-type(32) {
-  animation-delay: 0.01711s;
+  animation-delay: 0.44776s;
   left: calc((100% - 5em) * 0.62);
 }
 
 .particle:nth-of-type(33) {
-  animation-delay: 0.74617s;
+  animation-delay: 0.84124s;
   left: calc((100% - 5em) * 0.64);
 }
 
 .particle:nth-of-type(34) {
-  animation-delay: 0.50315s;
+  animation-delay: 0.97951s;
   left: calc((100% - 5em) * 0.66);
 }
 
 .particle:nth-of-type(35) {
-  animation-delay: 0.26411s;
+  animation-delay: 0.07981s;
   left: calc((100% - 5em) * 0.68);
 }
 
 .particle:nth-of-type(36) {
-  animation-delay: 0.07906s;
+  animation-delay: 0.30057s;
   left: calc((100% - 5em) * 0.7);
 }
 
 .particle:nth-of-type(37) {
-  animation-delay: 0.71936s;
+  animation-delay: 0.21631s;
   left: calc((100% - 5em) * 0.72);
 }
 
 .particle:nth-of-type(38) {
-  animation-delay: 0.37176s;
+  animation-delay: 0.35892s;
   left: calc((100% - 5em) * 0.74);
 }
 
 .particle:nth-of-type(39) {
-  animation-delay: 0.27077s;
+  animation-delay: 0.82144s;
   left: calc((100% - 5em) * 0.76);
 }
 
 .particle:nth-of-type(40) {
-  animation-delay: 0.251s;
+  animation-delay: 0.60204s;
   left: calc((100% - 5em) * 0.78);
 }
 
 .particle:nth-of-type(41) {
-  animation-delay: 0.76351s;
+  animation-delay: 0.45112s;
   left: calc((100% - 5em) * 0.8);
 }
 
 .particle:nth-of-type(42) {
-  animation-delay: 0.40442s;
+  animation-delay: 0.27018s;
   left: calc((100% - 5em) * 0.82);
 }
 
 .particle:nth-of-type(43) {
-  animation-delay: 0.79073s;
+  animation-delay: 0.5296s;
   left: calc((100% - 5em) * 0.84);
 }
 
 .particle:nth-of-type(44) {
-  animation-delay: 0.86608s;
+  animation-delay: 0.71508s;
   left: calc((100% - 5em) * 0.86);
 }
 
 .particle:nth-of-type(45) {
-  animation-delay: 0.48998s;
+  animation-delay: 0.75336s;
   left: calc((100% - 5em) * 0.88);
 }
 
 .particle:nth-of-type(46) {
-  animation-delay: 0.88361s;
+  animation-delay: 0.06475s;
   left: calc((100% - 5em) * 0.9);
 }
 
 .particle:nth-of-type(47) {
-  animation-delay: 0.30167s;
+  animation-delay: 0.81244s;
   left: calc((100% - 5em) * 0.92);
 }
 
 .particle:nth-of-type(48) {
-  animation-delay: 0.37108s;
+  animation-delay: 0.13012s;
   left: calc((100% - 5em) * 0.94);
 }
 
 .particle:nth-of-type(49) {
-  animation-delay: 0.74139s;
+  animation-delay: 0.33113s;
   left: calc((100% - 5em) * 0.96);
 }
 
 .particle:nth-of-type(50) {
-  animation-delay: 0.33193s;
+  animation-delay: 0.72972s;
   left: calc((100% - 5em) * 0.98);
 }
 
