--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -582,7 +582,7 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
     color:rgb(168, 156, 156);
     text-shadow: 0 0 1vh rgb(18, 18, 24), 0 0 .5vh rgb(18, 18, 24), 0 0 .75vh rgb(18, 18, 24), 0 0 1.5vh rgb(18, 18, 24);
 }
-.titusChallenge{
+.titusChallenge, .showLikeWaterC{
     @include instaFlex;
     color:rgba(0, 0, 0, 0.911);
     text-shadow: 0 0 1vh darkorange, 0 0 1.5vh darkorange, 0 0 2vh darkorange, 0 0 2.5vh darkorange, 0 0 3vh darkorange;
@@ -592,7 +592,7 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
     z-index:10;
     margin:auto auto;
     text-align: center;
-    .titusChallengeCrest{
+    .titusChallengeCrest,.showLikeWaterCrest{
         width:40vw;
         height:60vh;
         font-family: $coinFont2;
@@ -659,7 +659,7 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
     z-index:10;
     margin:auto auto;
     text-align: center;
-    .niaChallengeCrest, .deadlyCursePanelCrest, .soCoolMistressPanelCrest,.brutalMasterCrest{
+    .niaChallengeCrest, .deadlyCursePanelCrest, .soCoolMistressPanelCrest,.brutalMasterCrest,.showLikeWaterCrest{
         width:50vw;
         height:60vh;
         font-family: $coinFont2;
@@ -726,6 +726,7 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
         border-radius: 47% 47% 47% 47%;
     }
 }
+.showLikeWater.blighted,.nooner.showLikeWater{ opacity: 0; }
 
 .bb_HUD{
     width: 133%;
